Added java memory options