@@ -1,6 +1,8 @@
 #!/bin/bash
 
-java -Drundeck.jetty.connector.forwarded=true \
+java -Xmx768M \
+  -XX:MaxPermSize=256M \
+  -Drundeck.jetty.connector.forwarded=true \
   -Dserver.http.host=0.0.0.0 \
   -Dserver.hostname=${SERVER_NAME} \
   -Dserver.http.port=${SERVER_PORT:-4440} \
